--- a/CSS/sidenav.css
+++ b/CSS/sidenav.css
@@ -25,7 +25,7 @@
     height: 5rem;
     width: 7rem;
     cursor: pointer;
-    z-index: 4;
+    z-index: 9990;
     top: 45%; 
     left: -3.5rem;
 }
@@ -59,7 +59,17 @@
     /* border: 3px dotted #000; */
 }
 #myCanvas:hover{
-    cursor: crosshair;
+    /* cursor: crosshair; */
+    cursor: none;
+}
+
+#mouseFollower {
+    position: absolute;
+    border: 1px solid black;
+    height: 5px;
+    width: 5px;
+    border-radius: 50%;
+    pointer-events: none; /* Evita que o círculo interfira com eventos do mouse */
 }
 
 #btnDraw{
