--- a/CSS/capsules.css
+++ b/CSS/capsules.css
@@ -60,7 +60,7 @@
     background-color: green;
     opacity: 1;
   } 
-  .close{
+  .CloseR{
     position: absolute;
     width: 30px;
     height: 30px;
