--- a/teste/styles.css
+++ b/teste/styles.css
@@ -1,20 +1,51 @@
+.absolute{
+    position: absolute;
+}
+.margin{
+    margin: 0px;
+}
 .search-container {
     text-align: center;
-    margin: 20px;
+    top: 0px;
+    left: 0px;
+    
 }
 
 #search-input {
-    width: 100%;
+    width: calc(100vw - 22px); /* 2 border + 2 padding */
+    height: 20px;
     padding: 10px;
     font-size: 16px;
+    border: 1px solid black;
+    outline: none;
 }
+/* #search-input:focus{
+    border: 0px solid black;
+} */
 
 .results-container {
     text-align: center;
     display: none;
+    padding: 0px;
+    width: calc(100vw - 2px);
+    left: 0px;
+    top: 41px; /* search-input height + 2 border + 2 padding */
+    border: 1px solid black;
+}
+
+
+.answer-container{
+    padding: 10px;
+    border: 1px solid black;
+    background-color: white;
+}
+.answer-container:nth-child(even){
+    padding: 10px;
+    background-color: #f2f2f2;
 }
 
 #results-list {
     list-style-type: none;
+    margin: 0px;
     padding: 0;
 }
