--- a/CSS/pesquisa.css
+++ b/CSS/pesquisa.css
@@ -29,7 +29,7 @@
 }
 .resposta:nth-child(even){
     padding: 10px;
-    background-color: #f2f2f2;
+    background-color: var(--WhiteGray);
 }
 
 #lista {
@@ -40,8 +40,8 @@
     margin: 0px;
     padding: 0px;
     z-index: 3;
-    outline: #f0f0f0 solid 3px;
-    box-shadow: 6px 5px 7px #0000001f;
+    outline: var(--AlmostWhite) solid 3px;
+    box-shadow: 6px 5px 7px var(--AlmostTransparent);
 }
 
 #searchBar{
@@ -55,18 +55,18 @@
     border-radius: 1rem;
     z-index: 2;
     font-size: 1.5rem;
-    outline: #f0f0f0 solid 3px;
-    box-shadow: 6px 5px 7px #0000001f;
+    outline: var(--AlmostWhite) solid 3px;
+    box-shadow: 6px 5px 7px var(--AlmostTransparent);
 }
 
 #searchBar:focus{
     transition: 100ms;
-    outline: #d1d1d1 solid 3px;
+    outline: var(--WhiteHover) solid 3px;
 }
 
 #searchBar:hover{
     transition: 100ms;
-    background-color: #fdfdfd;
+    background-color: var(--WhiteFocus);
 }
 
 #lupa{
