--- a/colpick/css/colpick.css
+++ b/colpick/css/colpick.css
@@ -11,7 +11,7 @@ colpick Color Picker / colpick.com
 	display: none;
 	
 	font-family: Arial, Helvetica, sans-serif;
-	background: #f0f0f0;
+	background: var(--AlmostWhite);
 	border: 1px solid #aaa;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
