--- a/CSS/capsules.css
+++ b/CSS/capsules.css
@@ -34,7 +34,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: black;
+  color: var(--Black);
   font-family: Arial, sans-serif;
   }
   .tstDiv {
@@ -52,9 +52,6 @@
     padding: 5px;
     margin-bottom: 5px;
   }
-  /* .tstDiv button:hover {
-    background-color: var(--LightGray);
-  } */
   .tstDiv .icon {
     font-size: 30px;
     margin-bottom: 10px;
@@ -72,7 +69,7 @@
     justify-content: left;
     padding-left: 15px;
     vertical-align: middle;
-    color: white;
+    color: var(--White);
     font-family: Arial, sans-serif;   
   }
   .minimize{
@@ -132,7 +129,7 @@
   }
 
   .arrow{
-    border: solid black;
+    border: solid var(--Black);
     height: 4px;
     width: 4px;
     border-width: 0 4px 4px 0;
