--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,78 +11,33 @@ html{
 .noCopy{
     user-select: none;
 }
+
+#tema{
+    position: absolute;
+    background-color: var(--SecondAccentColor);
+    top: 20px;
+    height: 30px;
+    width: 10vw;
+    right: 50px;
+}
+
 #list{
     z-index:inherit;
     background-color: var(--SecondAccentColor);
-    color: white;
+    color: var(--White);
     border-width: 0px;
     transition: color 0.05s;
 }
 #list:hover{
-    /* background-color: white; */
+    /* background-color: var(--White); */
     color: antiquewhite;
     transition: color 0.2s;
-}
-#txt{
-    margin: 1%;
-}
-
-#btnSubmit{
-    margin: 1%;
-}
-
-#btnReset{
-    margin: 1%;
 }
 
 div.sticky{
     position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 0;
-}
-
-#myBtn {
-    display: inline-block;
-    height: 3rem;
-    width: 3rem;
-    position: fixed;
-    bottom: 4%;
-    right: 5%;
-    z-index: 2;
-    font-size: 16px;
-    background-color: var(--RealDarkBlue);
-    color: none;
-    cursor: pointer;
-    opacity: 0;
-    border-radius: 100%;
-    border-width: 0px;
-    -webkit-transition: opacity 0.15s;
-    transition: opacity 0.15s;
-}
-
-#myBtn:hover {
-    background-color: var(--TransparentDarkBlue);
-    -webkit-transition: background-color 0.2s;
-    transition: background-color 0.2s;
-}
-
-.btnSubmit{
-    background-color: var(--RealDarkBlue);
-    border-color: var(--RealDarkBlue);
-    color: white;
-    cursor: pointer;
-    border-radius: 4px;
-    border-width: 1%;
-    padding: 2%;
-    padding-left: 10%;
-    padding-right: 10%;
-}
-
-.txt{
-    background-color: white;
-    border-color: gray;
-    /* border-radius: 4px; */
-    margin: 1%;
 }
 
 #contato{
@@ -99,7 +54,7 @@ div.sticky{
     z-index: 999;
 }
 #answer{
-    color:var(--WhiteGray);
+    color:var(--LightGray);
     background-color: var(--SecondAccentColor);
     border-width: 0px;
     height: 100%;
@@ -109,7 +64,7 @@ div.sticky{
     font-size: xxx-large;
 }
 #preAns{
-    color:var(--OtherWhiteGray);
+    color:var(--LightGray);
     background-color: var(--SecondAccentColor);
     border-width: 0px;
     height: 30%;
@@ -130,10 +85,9 @@ div.sticky{
     padding-right: 10%;
     font-size: 4rem;
     text-align: center;
-    color: var(--WhiteGray); 
+    color: var(--LightGray); 
 }
 .grid-item-operandos{
-    background-color: var(--ExtremelyTransparentDarkBlue);
     border: 0px;
     padding: 5%;
     color: var(--AccentColor);
