--- a/CSS/root.css
+++ b/CSS/root.css
@@ -1,16 +1,16 @@
 :root{
-    --Black: #000000; /* background */
-    --RealDarkBlue: #1f1926; /* usado especialmente nos numeros da calculadora sidenav */
-    --AlmostTransparent: #0000001f; /* sombra da lista de pesquisa */
-    --BaseColor: #322c40; /*primeira principal cor do app */
-    --AzulClaroBkg: #80b9e0; /* background */
-    --Red: #cf0000; /* background */
-    --SecondAccentColor: #605869; /* terceira cor principal do app, contraste com ambas */
-    --AccentColor: #B6B7CF; /* segunda cor principal do app, contraste com a base */
-    --LightGray: #dddddd; /* usado na caluladora, lista da barra de pesquisa */
-    --AlmostWhite: #f0f0f0; /* plano de fundo atras do bkgd, borda da barra de pesquisa */
-    --WhiteFocus: #fdfdfd; /* focus na barra de pesquisa */
-    --White: #ffffff; /* background */
+    --Black: #000000;                    /* background */
+    --RealDarkBlue: #1f1926;             /* usado especialmente nos numeros da calculadora sidenav */
+    --AlmostTransparent: #0000001f;      /* sombra da lista de pesquisa */
+    --BaseColor: #322c40;                /*primeira cor principal do app */
+    --AzulClaroBkg: #80b9e0;             /* background */
+    --Red: #cf0000;                      /* background */
+    --SecondAccentColor: #605869;        /* terceira cor principal do app, contraste com ambas */
+    --AccentColor: #B6B7CF;              /* segunda cor principal do app, contraste com a base */
+    --LightGray: #dddddd;                /* usado na caluladora, lista da barra de pesquisa */
+    --AlmostWhite: #f0f0f0;              /* plano de fundo atras do bkgd, borda da barra de pesquisa */
+    --WhiteFocus: #fdfdfd;               /* focus na barra de pesquisa */
+    --White: #ffffff;                    /* background */
 }
 
     /* 000000
