--- a/CSS/capsules.css
+++ b/CSS/capsules.css
@@ -36,6 +36,7 @@
   justify-content: center;
   color: var(--Black);
   font-family: Arial, sans-serif;
+  min-width: 290px; min-height: 290px;
   }
   .tstDiv {
     width: 320px;
@@ -43,6 +44,7 @@
     justify-content: center;
     padding: 60px;
     background-color: aliceblue;
+    min-width: 290px; min-height: 290px;
   }
   .tstDiv form {
     margin-bottom: 10px;
@@ -70,7 +72,8 @@
     padding-left: 15px;
     vertical-align: middle;
     color: var(--White);
-    font-family: Arial, sans-serif;   
+    font-family: Arial, sans-serif; 
+    min-width: 290px;
   }
   .minimize{
     position: absolute;
@@ -102,18 +105,21 @@
     height: 5px;
     cursor: s-resize;
     left: 0px;
+    min-width: 290px;
   }
   .e {
     width: 5px;
     height: 320px;
     cursor: e-resize;
     right: 0px;
+    min-height: 290px;
   }
   .w {
     width: 5px;
     height: 320px;
     cursor: w-resize;
     left: 0px;
+    min-height: 290px;
   }
   .se {
     width: 5px;
