--- a/CSS/main.css
+++ b/CSS/main.css
@@ -15,10 +15,10 @@ html{
 #tema{
     position: absolute;
     background-color: var(--SecondAccentColor);
-    top: 20px;
-    height: 30px;
-    width: 10vw;
-    right: 50px;
+    top: 0px;
+    height: 100%;
+    width: 70px;
+    right: 0px;
 }
 
 #list{
