--- a/CSS/main.css
+++ b/CSS/main.css
@@ -53,29 +53,46 @@ div.sticky{
     transition: 0.3s;
     z-index: 999;
 }
+#answer:focus{
+    outline: 0px;
+}
 #answer{
     color:var(--LightGray);
     background-color: var(--SecondAccentColor);
     border-width: 0px;
-    height: 100%;
+    height: 10vh;
     width: 95%;
-    margin-top: 10%;
-    margin-left: 2.5%;
-    font-size: xxx-large;
+    top: 10vh;
+    left: 1vw;
+    font-size: 10vh;
+    position: absolute;
 }
 #preAns{
     color:var(--LightGray);
     background-color: var(--SecondAccentColor);
     border-width: 0px;
-    height: 30%;
+    height: 7vh;
     width: 92%;
-    margin-top: 1%;
-    margin-left: 4%;
-    font-size: xx-large;
+    top: 20vh;
+    left: 2vw;
+    font-size: 6vh;
+    position: absolute;
+}
+#caneta{
+    background-color: var(--LightGray);
+    height: 90vh;
+    width: 14vw;
+    left: 0vw;
+    top: 5vh;
+    border: 5px;
+    border-radius: 15px;
+    border-bottom-left-radius: 0px;
+    border-top-left-radius: 0px;
+    position: absolute;
+    overflow: hidden;
 }
 .grid-container {
     display: grid;
-    padding: 5%;
     align-content: center;
 }
 .contato{
@@ -95,19 +112,16 @@ div.sticky{
     position: relative;
      cursor: pointer;
     border: 0px;
-    padding: 5%;
     color: var(--AccentColor);
-    margin-bottom: 0%;
-    font-size: 10vh;
-    line-height: 10vh;
+    margin: 0%;
+    font-size: 8vh;
     text-align: center;
 }
 .grid-item-extra{
     background-color: var(--AccentColor);
     border: 0px;
-    padding-bottom: 15%;
     color: var(--RealDarkBlue); 
-    margin: 5%;
-    margin-left: 15%;
-    font-size: 2rem;
+    font-size: 6vh;
+    text-align: center;
+    height: 13vh;
 }
