--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,9 @@
 html{
     scroll-behavior: smooth;
 }
+p{
+    font-size: 1rem;
+}
 .topMenu{
     position: fixed;
     height: 100px;
@@ -64,7 +67,7 @@ div.sticky{
     width: 95%;
     top: 10vh;
     left: 1vw;
-    font-size: 10vh;
+    font-size: max(1rem, 10vh);
     position: absolute;
 }
 #preAns{
@@ -75,7 +78,7 @@ div.sticky{
     width: 92%;
     top: 20vh;
     left: 2vw;
-    font-size: 6vh;
+    font-size: max(1rem, 6vh);
     position: absolute;
 }
 #caneta{
@@ -104,7 +107,7 @@ div.sticky{
     border: 0px;
     padding-left: 10%;
     padding-right: 10%;
-    font-size: 10vh;
+    font-size: max(1rem, 10vh);
     text-align: center;
     color: var(--LightGray); 
 }
@@ -114,14 +117,14 @@ div.sticky{
     border: 0px;
     color: var(--AccentColor);
     margin: 0%;
-    font-size: 8vh;
+    font-size: max(1rem, 8vh);
     text-align: center;
 }
 .grid-item-extra{
     background-color: var(--AccentColor);
     border: 0px;
     color: var(--RealDarkBlue); 
-    font-size: 6vh;
+    font-size: max(1rem, 6vh);
     text-align: center;
     height: 13vh;
 }
