--- a/CSS/capsules.css
+++ b/CSS/capsules.css
@@ -69,6 +69,7 @@
     width: 80%;
     height: 2.2rem;
     padding: 5px;
+    padding-left: 10px;
     left: 10%;
     border: 0px solid var(--Black);
     box-shadow: -4px 4px var(--Black);
