--- a/CSS/capsules.css
+++ b/CSS/capsules.css
@@ -64,6 +64,7 @@
     position: absolute; 
     padding-left: 10vw; 
     padding-right: 10vw; 
+    font-weight:bolder;
     width: 100vw; 
     bottom: 10px; 
     z-index: 9999; 
